--- a/FTLSupporter/FTLSupporter.csproj
+++ b/FTLSupporter/FTLSupporter.csproj
@@ -15,8 +15,8 @@
     <AssemblyOriginatorKeyFile>sn.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="../FTLInsightsLogger/PVRCloudInsightsLogger.csproj" />
     <ProjectReference Include="..\CommonUtils\CommonUtils.csproj" />
-    <ProjectReference Include="..\FTLInsightsLogger\FTLInsightsLogger.csproj" />
     <ProjectReference Include="..\GMap.NET.Core\GMap.NET.Core.csproj" />
     <ProjectReference Include="..\PMap\PMapCore.csproj" />
   </ItemGroup>
