--- a/FTLSupporterTest/FTLSupporterTest.csproj
+++ b/FTLSupporterTest/FTLSupporterTest.csproj
@@ -15,7 +15,7 @@
     <AssemblyOriginatorKeyFile>sn.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FTLInsightsLogger\FTLInsightsLogger.csproj" />
+    <ProjectReference Include="../FTLInsightsLogger/PVRCloudInsightsLogger.csproj" />
     <ProjectReference Include="..\FTLSupporter\FTLSupporter.csproj" />
     <ProjectReference Include="..\GMap.NET.Core\GMap.NET.Core.csproj" />
     <ProjectReference Include="..\PMap\PMapCore.csproj" />
