--- a/FTLApi/PVRCloudApi.csproj
+++ b/FTLApi/PVRCloudApi.csproj
@@ -7,6 +7,11 @@
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <_WebToolingArtifacts Remove="Properties/PublishProfiles/pvrpcloudsupporterwebapidev - FTP.pubxml" />
+    <_WebToolingArtifacts Remove="Properties/PublishProfiles/pvrpcloudsupporterwebapidev - Web Deploy.pubxml" />
+    <_WebToolingArtifacts Remove="Properties/PublishProfiles/pvrpcloudsupporterwebapidev - Zip Deploy.pubxml" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Azure.Storage.Queues" Version="12.12.0" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
