--- a/FTLApi/PVRCloudApi.csproj
+++ b/FTLApi/PVRCloudApi.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FTLSupporter\FTLSupporter.csproj" />
+    <ProjectReference Include="..\PVRCloud\PVRCloud.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="PMAP.ini">
