--- a/FTLApi/PVRCloudApi.csproj
+++ b/FTLApi/PVRCloudApi.csproj
@@ -19,7 +19,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PVRCloud\PVRCloud.csproj" />
+    <ProjectReference Include="../PVRCloud/PVRPCloud.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="PMAP.ini">
