--- a/PVRPCloudApiTester/Properties/launchSettings.json
+++ b/PVRPCloudApiTester/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "FTLApiTester": {
+    "PVRPCloudApiTester": {
       "commandName": "Project",
       "commandLineArgs": ""
     }
