--- a/PVRPCloudApi/PMAP.ini
+++ b/PVRPCloudApi/PMAP.ini
@@ -1,23 +1,23 @@
 [PMap]
 LogDir=d:\temp\ct\logs
-MapJSonDir=c:\projects\FTLSupporter\SWH\Maps.555_r2
+MapJSonDir=c:\projects\PVRPCloudSupporter\SWH\Maps.555_r2
 
 
 
 [Speeds]
-#Autópálya
+#Autï¿½pï¿½lya
 Speed1=70
-#Autóút
+#Autï¿½ï¿½t
 Speed2=60
-#Foútvonal
+#Foï¿½tvonal
 Speed3=50
-#Mellékút
+#Mellï¿½kï¿½t
 Speed4=40
-#Egyéb alárendelt út
+#Egyï¿½b alï¿½rendelt ï¿½t
 Speed5=35
-#Város (utca)
+#Vï¿½ros (utca)
 Speed6=15
-#Fel/lehajtók, rámpák
+#Fel/lehajtï¿½k, rï¿½mpï¿½k
 Speed7=15
 
 
