--- a/PVRPCloudApiTester/appsettings.json
+++ b/PVRPCloudApiTester/appsettings.json
@@ -7,23 +7,23 @@
     }
   },
   "AllowedHosts": "*",
-  "FTLApiTester": {
+  "PVRPCloudApiTester": {
     "AzureStorageConnectionString": "",
     "QueueName": "",
     "TestDataPath": "",
-    "FTLApiBaseUrl": "",
+    "PVRPCloudApiBaseUrl": "",
     "MaxTruckDistance": 10000,
     "MaxMessagesFromQueueAtOnce": 32, // Max 32
     "MaxMessageTimeSpanInMinutes": 10,
     "WaitBeforeBetweenQueueQueryInMs": 10000,
     "MaxMessageLimitPerRequest": 1000,
     "MaxWaitLimitForResultPerRequestInMinutes": 10,
-    "ResultFileIdentifier": "_FTLResult",
-    "TaskFileIdentifier": "_FTLTask",
-    "TruckFileIdentifier": "_FTLTruck",
+    "ResultFileIdentifier": "_PVRPCloudResult",
+    "TaskFileIdentifier": "_PVRPCloudTask",
+    "TruckFileIdentifier": "_PVRPCloudTruck",
     "TestResultFileIdentifier": "_APIResult",
-    "FTLSupportFileSuffix": "_FTLSupport",
-    "FTLSupportXFileSuffix": "_FTLSupportX",
+    "PVRPCloudSupportFileSuffix": "_PVRPCloudSupport",
+    "PVRPCloudSupportXFileSuffix": "_PVRPCloudSupportX",
     "FileExtension": "json",
     "ClearQueueBeforeGettingMessages":  true
   },
@@ -57,7 +57,7 @@
       }
     ],
     "Properties": {
-      "Application": "FTLApiTester"
+      "Application": "PVRPCloudApiTester"
     }
   }
 }
