--- a/.github/workflows/PVRCloud_BE_CICDtoDev.yaml
+++ b/.github/workflows/PVRCloud_BE_CICDtoDev.yaml
@@ -4,7 +4,7 @@
 name: Build and deploy bbxBE to DEV environment
 
 env:
-  AZURE_WEBAPP_NAME: bbxBE # set this to your application's name
+  AZURE_WEBAPP_NAME: PRVPCloudWebAPITest # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: "." # set this to the path to your web app project, defaults to the repository root
 
 on:
@@ -53,7 +53,7 @@ jobs:
           path: /home/runner/work/PVRCloud/PVRCloud/PVRPCloudApi/bin/Release/net8.0/publish/
 
   deploy:
-    if: ${{ github.event.pull_request.merged }}
+#    if: ${{ github.event.pull_request.merged }}
     name: Deploy BackEnd to Azure WebApp
     runs-on: windows-latest
     needs: build
@@ -70,16 +70,16 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.BBXBE_DEV_AZURE_CREDENTIAL }}
+          creds: ${{ secrets.PVRPCLOUDWEBAPI_DEPLOY_KEY_DEV_ENV }}
           
       - name: Azure WebApp configuration settings
         uses: azure/appservice-settings@v1
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           #slot-name: 'staging'  # Optional and needed only if the settings have to be configured on the specific deployment slot
-          app-settings-json: ${{ secrets.BBXBE_DEV_APSETTINGS }}
-          connection-strings-json: '${{ secrets.BBX_DEV_DB_CONNECTIONSTRING }}'
-          general-settings-json: '{"alwaysOn": "false", "webSocketsEnabled": "false"}' #'General configuration settings as Key Value pairs'
+          #app-settings-json: ${{ secrets.BBXBE_DEV_APSETTINGS }}
+          #connection-strings-json: '${{ secrets.BBX_DEV_DB_CONNECTIONSTRING }}'
+          #general-settings-json: '{"alwaysOn": "false", "webSocketsEnabled": "false"}' #'General configuration settings as Key Value pairs'
         id: settings
         
       - name: Azure Logout
@@ -91,5 +91,5 @@ jobs:
         uses: azure/webapps-deploy@0b651ed7546ecfc75024011f76944cb9b381ef1e
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.BBXBE_DEV_PUBLISH_PROFILE }}
+          publish-profile: ${{ secrets.PVRPCLOUDWEBAPI_DEPLOY_KEY_DEV_ENV }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
