create api test

--- a/PVRPCloudApi/PVRPCloudApi.csproj
+++ b/PVRPCloudApi/PVRPCloudApi.csproj
@@ -27,4 +27,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <InternalsVisibleTo Include="PVRPCloudApiTests" />
+  </ItemGroup>
 </Project>
