--- a/.github/workflows/PVRCloud_BE_CICDtoDev.yaml
+++ b/.github/workflows/PVRCloud_BE_CICDtoDev.yaml
@@ -71,6 +71,7 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.PVRPCLOUDWEBAPI_DEPLOY_KEY_DEV_ENV }}
+          allow-no-subscriptions: true
           
       - name: Azure WebApp configuration settings
         uses: azure/appservice-settings@v1
