--- a/.github/workflows/PVRCloud_BE_CICDtoDev.yaml
+++ b/.github/workflows/PVRCloud_BE_CICDtoDev.yaml
@@ -6,6 +6,7 @@ name: Build and deploy bbxBE to DEV environment
 env:
   AZURE_WEBAPP_NAME: PRVPCloudWebAPITest # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: "." # set this to the path to your web app project, defaults to the repository root
+  ACTIONS_ID_TOKEN_REQUEST_URL: ""
 
 on:
   pull_request: 
