--- a/.github/workflows/PVRCloud_BE_CICDtoDev.yaml
+++ b/.github/workflows/PVRCloud_BE_CICDtoDev.yaml
@@ -61,6 +61,10 @@ jobs:
     environment:
       name: "development"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
 
     steps:
       - name: Download artifact from build job
