--- a/PVRPCloudApiTests/PVRPCloudApiTests.csproj
+++ b/PVRPCloudApiTests/PVRPCloudApiTests.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.6" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +24,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PVRPCloudApi\PVRPCloudApi.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Validators/" />
   </ItemGroup>
 
 </Project>
