--- a/.github/workflows/PVRCloud_BE_CICDtoDev.yaml
+++ b/.github/workflows/PVRCloud_BE_CICDtoDev.yaml
@@ -73,14 +73,11 @@ jobs:
           name: .net-app
           
       - name: Login to Azure
-        uses: azure/login@v2
+        uses: azure/login@v1
         with:
-          client-id: ${{ secrets.CLIENTID }}
-          tenant-id: ${{ secrets.TENANTID }}
-          subscription-id: ${{ secrets.SUBSCRIPTIONID }}
-          enable-AzPSSession: true
-#          creds: ${{ secrets.PVRPCLOUDWEBAPI_DEPLOY_KEY_DEV_ENV }}
-#          allow-no-subscriptions: true
+          client-id: ${{ secrets.PRATIX_AZURE_CLIENTID }}
+          tenant-id: ${{ secrets.PRATIX_AZURE_TENANTID }}
+          subscription-id: ${{ secrets.PRATIX_AZURE_SUBSCRIPTIONID }}
           
 #      - name: Azure WebApp configuration settings
 #        uses: azure/appservice-settings@v1
