--- a/.github/workflows/PVRCloud_BE_CICDtoDev.yaml
+++ b/.github/workflows/PVRCloud_BE_CICDtoDev.yaml
@@ -75,9 +75,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.PRATIX_AZURE_CLIENTID }}
-          tenant-id: ${{ secrets.PRATIX_AZURE_TENANTID }}
-          subscription-id: ${{ secrets.PRATIX_AZURE_SUBSCRIPTIONID }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_27B614A6609544D7ADCA23BB8CDFAB01 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_9F7A3F9D74D94E0E9702065C6D4F0207 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_DCE8D96ACD034FDC9405A992A1860FC1 }}
           
 #      - name: Azure WebApp configuration settings
 #        uses: azure/appservice-settings@v1
