--- a/PMap/PMapCore.csproj
+++ b/PMap/PMapCore.csproj
@@ -84,5 +84,8 @@
     <PackageReference Include="System.Spatial" Version="5.8.2" />
     <PackageReference Include="WindowsAzure.Storage" Version="8.7.0" />
   </ItemGroup>
-  <PropertyGroup />
+  <PropertyGroup>
+    <AssemblyVersion>5.1.0</AssemblyVersion>
+    <FileVersion>5.1.0</FileVersion>
+  </PropertyGroup>
 </Project>
