--- a/PVRPCloudApi/PVRPCloudApi.csproj
+++ b/PVRPCloudApi/PVRPCloudApi.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
+    <UserSecretsId>d4d7fbb5-a04d-4a85-a767-ea33b73639fa</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <_WebToolingArtifacts Remove="Properties/PublishProfiles/pvrpcloudsupporterwebapidev - FTP.pubxml" />
