--- a/PVRPCloud/PVRPCloud.csproj
+++ b/PVRPCloud/PVRPCloud.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>bcceb233-4c3e-4e09-9728-1076e3ef15a7</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
