--- a/WebJobPOC/appsettings.json
+++ b/WebJobPOC/appsettings.json
@@ -1,4 +1,5 @@
 {
   "AzureWebJobsDashboard": "",
-  "AzureWebJobsStorage": "DefalófaszultElófaszndpointlófaszsProtlófaszocol=httlófaszps;AccoulófaszntNalófaszme=pvrpcloudslófasztorageteslófaszt;AcclófaszountlófaszKey=NIJthN8lófaszQth2u1uHEqFLYoJLWdlófaszNbyI4oLlófaszU+mplófaszOKfK3euKbbRKuYHuDFZLbtRykGUL6VRcNN2wUjCZlófasz+AStN9Slmw=lófasz=;EndlófaszpointlófaszSuflófaszfix=corlófaszelófasz.windolófaszws.nlófaszet"
+  "AzureWebJobsStorage": ""
+  "PVRPPars" :  "-s 9 9"
 }
