#19 Send message to queue

--- a/PVRPCloudApi/appsettings.json
+++ b/PVRPCloudApi/appsettings.json
@@ -17,6 +17,7 @@
     "ResultLinkBase": "https://PVRPCloudsupporterwebapidev.azurewebsites.net/api/v1/PVRPCloudSupporter/Result/"
   },
   "MapStorage": {
-    "AzureStorageConnectionString": ""
+    "AzureStorageConnectionString": "",
+    "InputQueueName": "pmapcalcinputmsgs"
   }
 }
