--- a/WebJobPOC/appsettings.json
+++ b/WebJobPOC/appsettings.json
@@ -1,5 +1,6 @@
 {
   "AzureWebJobsDashboard": "",
-  "AzureWebJobsStorage": ""
-  "PVRPPars" :  "-s 9 9"
+  "AzureWebJobsStorage": "",
+  "PVRPPars": "-s 9 9",
+  "ProcessMemoryInMB" : 0
 }
