--- a/WebJobPOC/appsettings.json
+++ b/WebJobPOC/appsettings.json
@@ -1,6 +1,8 @@
 {
-  "AzureWebJobsDashboard": "",
-  "AzureWebJobsStorage": "",
+  "ConnectionStrings": {
+    "AzureWebJobsDashboard": "",
+    "AzureWebJobsStorage": ""
+  },
   "PVRPPars": "-s 9 9",
-  "ProcessMemoryInMB" : 0
+  "ProcessMemoryInMB": 0
 }
