--- a/Installer/PMAP.ini
+++ b/Installer/PMAP.ini
@@ -102,7 +102,7 @@ PlanArgs=-s 8 8 -f  d:\\work\\source\\Correct-Tour_RB\\P-VRP\\init_t.cl
 PlanOK=d:\work\source\Correct-Tour_RB\P-VRP\ok.dat
 PlanErr=d:\work\source\Correct-Tour_RB\P-VRP\error.dat
 TrkMaxWorkTime=1080
-OptimizeTimeOutSec=12000
+OptimizeTimeOutSec=30
 #Megrendelés dm3 --> jármû m3 konverzióhoz
 OrdVolumeMultiplier=1
 
