--- a/PVRPCalculation/appsettings.json
+++ b/PVRPCalculation/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ApplicationInsights": {
-    "ConnectionString": "InstrumentationKey=fac65681-a709-4509-8e33-2c1ad9addf9c;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/;ApplicationId=01e8c043-9888-4352-b4a5-4c5a82cff835",
+    "ConnectionString": "",
     "LogLevel": {
       "Default": "Information"
     }
