--- a/PVRPCloudApi/appsettings.json
+++ b/PVRPCloudApi/appsettings.json
@@ -11,8 +11,8 @@
     "ApplicationInsightsConnectionString": "",
     "AzureStorageConnectionString": "",
     "QueueName": "PVRPCloudsupportresponses",
-    "AutoCommitAfterEveryLogEnabled": true,
-    "UseQueue": true,
+    "AutoCommitAfterEveryLogEnabled": false,
+    "UseQueue": false,
     "ResultBlobContainer": "result",
     "ResultLinkBase": "https://PVRPCloudsupporterwebapidev.azurewebsites.net/api/v1/PVRPCloudSupporter/Result/"
   },
