--- a/PVRPCalculation/appsettings.json
+++ b/PVRPCalculation/appsettings.json
@@ -2,18 +2,18 @@
   "ApplicationInsights": {
     "ConnectionString": "",
     "LogLevel": {
-      "Default": "Information"
+      "Default": "Trace"
     }
   },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
-    },
+    }/*,
     "ApplicationInsights": {
       "LogLevel": {
         "Default": "Information"
       }
-    }
+    }*/
   },
   "ConnectionStrings": {
     "AzureWebJobsDashboard": "",
