--- a/PVRPCalculation/PVRPCalculation.csproj
+++ b/PVRPCalculation/PVRPCalculation.csproj
@@ -22,10 +22,12 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.ApplicationInsights" Version="2.22.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BlobManager\BlobUtils.csproj" />
+    <ProjectReference Include="..\CommonUtils\CommonUtils.csproj" />
   </ItemGroup>
 
   <ItemGroup>
