--- a/PVRPCloudApi/PVRPCloudApi.csproj
+++ b/PVRPCloudApi/PVRPCloudApi.csproj
@@ -15,10 +15,10 @@
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Queues" Version="12.12.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
-    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.ApplicationInsights" Version="2.22.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../PVRPCloud/PVRPCloud.csproj" />
