--- a/PVRPCloudApi/PVRPCloudApi.csproj
+++ b/PVRPCloudApi/PVRPCloudApi.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../PVRPCloud/PVRPCloud.csproj" />
+    <ProjectReference Include="..\CommonUtils\CommonUtils.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="PMAP.ini">
